--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="no_internet_connection">No Internet Connection</string>
     <string name="something_went_wrong">Something went wrong</string>
+    <string name="retry">Retry</string>
 </resources>
