--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="no_internet_connection">No Internet Connection</string>
     <string name="something_went_wrong">Something went wrong</string>
     <string name="retry">Retry</string>
+    <string name="rate">Rate</string>
+    <string name="popularity">Popularity</string>
+    <string name="language">Language</string>
 </resources>
